[gd_scene load_steps=50 format=3 uid="uid://cc7gan1m6foyq"]

[ext_resource type="Script" path="res://怪物/white_bone.gd" id="1_ck2aw"]
[ext_resource type="Texture2D" uid="uid://dx306rfeovtu5" path="res://Fantasy RPG heroes pack/1x/Tilesets & extras (free samples)/Skeleton 01_walk.png" id="1_y6w4i"]
[ext_resource type="PackedScene" uid="uid://2rmdh85t82oq" path="res://hitboxes_hurtboxes/hurtbox.tscn" id="2_byf1g"]
[ext_resource type="PackedScene" uid="uid://b32v7pmlkhl8f" path="res://属性/stats.tscn" id="4_6vyyw"]
[ext_resource type="PackedScene" uid="uid://be4vghw14h43x" path="res://怪物/player_detection_zone.tscn" id="5_5xb8h"]
[ext_resource type="PackedScene" uid="uid://ctdby4ex6eomd" path="res://hitboxes_hurtboxes/hitbox.tscn" id="6_v0ndd"]
[ext_resource type="PackedScene" uid="uid://lmcgfwsc54oa" path="res://hitboxes_hurtboxes/soft_collision.tscn" id="7_dnmn1"]
[ext_resource type="PackedScene" uid="uid://bgwdvroyk6weh" path="res://怪物/WanderController.tscn" id="8_nh884"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o1p2n"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ues8q"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6kub"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqhul"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncl1b"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5sef"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ged"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0af4"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ggok"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_glfxe"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2k42"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24h4x"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrhau"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvik1"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6l0u"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5ml"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5u3g"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4fpw"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq4ys"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpash"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eokfb"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_icy0y"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jib08"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b2qu"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlvqp"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnpqy"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5yd2"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_520jj"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahdqy"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohhyv"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xim23"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjrau"]
atlas = ExtResource( "1_y6w4i" )
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tm3ux"]
animations = [{
"frames": [SubResource( "AtlasTexture_o1p2n" ), SubResource( "AtlasTexture_ues8q" ), SubResource( "AtlasTexture_n6kub" ), SubResource( "AtlasTexture_gqhul" ), SubResource( "AtlasTexture_ncl1b" ), SubResource( "AtlasTexture_u5sef" ), SubResource( "AtlasTexture_k0ged" ), SubResource( "AtlasTexture_q0af4" ), SubResource( "AtlasTexture_0ggok" ), SubResource( "AtlasTexture_glfxe" ), SubResource( "AtlasTexture_w2k42" ), SubResource( "AtlasTexture_24h4x" ), SubResource( "AtlasTexture_rrhau" ), SubResource( "AtlasTexture_cvik1" ), SubResource( "AtlasTexture_m6l0u" ), SubResource( "AtlasTexture_uf5ml" )],
"loop": true,
"name": &"",
"speed": 5.0
}, {
"frames": [SubResource( "AtlasTexture_v5u3g" ), SubResource( "AtlasTexture_g4fpw" ), SubResource( "AtlasTexture_bq4ys" ), SubResource( "AtlasTexture_dpash" ), SubResource( "AtlasTexture_eokfb" ), SubResource( "AtlasTexture_icy0y" ), SubResource( "AtlasTexture_jib08" ), SubResource( "AtlasTexture_4b2qu" ), SubResource( "AtlasTexture_vlvqp" ), SubResource( "AtlasTexture_rnpqy" ), SubResource( "AtlasTexture_o5yd2" ), SubResource( "AtlasTexture_520jj" ), SubResource( "AtlasTexture_ahdqy" ), SubResource( "AtlasTexture_ohhyv" ), SubResource( "AtlasTexture_xim23" ), SubResource( "AtlasTexture_bjrau" )],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8tou6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_juhqw"]
resource_name = "waldown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvt8w"]
_data = {
"RESET": SubResource( "Animation_8tou6" ),
"waldown": SubResource( "Animation_juhqw" )
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ciwu"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_itsya"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rcalh"]
radius = 53.0377

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tul46"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_80prb"]
radius = 2.0
height = 8.0

[node name="whiteBone" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource( "1_ck2aw" )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
frames = SubResource( "SpriteFrames_tm3ux" )
animation = &"walk"
frame = 12
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource( "AnimationLibrary_pvt8w" )
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource( "CapsuleShape2D_6ciwu" )

[node name="hurtbox" parent="." instance=ExtResource( "2_byf1g" )]
collision_mask = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -7)
shape = SubResource( "CapsuleShape2D_itsya" )

[node name="Stats" parent="." instance=ExtResource( "4_6vyyw" )]
position = Vector2(0, -7)
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( "5_5xb8h" )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.152941)
shape = SubResource( "CircleShape2D_rcalh" )

[node name="hitbox" parent="." instance=ExtResource( "6_v0ndd" )]
collision_layer = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -6)
shape = SubResource( "CapsuleShape2D_tul46" )

[node name="SoftCollision" parent="." instance=ExtResource( "7_dnmn1" )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource( "CapsuleShape2D_80prb" )

[node name="WanderController" parent="." instance=ExtResource( "8_nh884" )]

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="hitbox"]
[editable path="SoftCollision"]
